[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["stream"] }